--- a/exploringEquities.ipynb
+++ b/exploringEquities.ipynb
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2401,19 +2401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:697: ConvergenceWarning:\n",
-      "\n",
-      "Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 5.660e+01, tolerance: 5.643e+00\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -2422,15 +2412,14 @@
        },
        "data": [
         {
-         "line": {
+         "marker": {
           "color": "black",
-          "width": 2
+          "size": 6
          },
-         "mode": "lines+markers",
-         "name": "Actual Close",
+         "mode": "markers",
+         "name": "Actual Movement (0=Down, 1=Up)",
          "type": "scatter",
          "x": [
-          199,
           200,
           201,
           202,
@@ -2479,59 +2468,60 @@
           245,
           246,
           247,
-          248
+          248,
+          249
          ],
          "y": [
-          175.46,
-          172.88,
-          173,
-          173.44,
-          171.1,
-          166.89,
-          168.22,
-          170.29,
-          170.77,
-          173.97,
-          177.57,
-          176.65,
-          179.23,
-          181.82,
-          182.89,
-          182.41,
-          186.4,
-          184.8,
-          187.44,
-          188.01,
-          189.71,
-          189.69,
-          191.45,
-          190.64,
-          191.31,
-          189.97,
-          189.79,
-          190.4,
-          189.37,
-          189.95,
-          191.24,
-          189.43,
-          193.42,
-          192.32,
-          194.27,
-          195.71,
-          193.18,
-          194.71,
-          197.96,
-          198.11,
-          197.57,
-          195.89,
-          196.94,
-          194.83,
-          194.68,
-          193.6,
-          193.05,
-          193.15,
-          193.58,
-          192.53
+          0,
+          1,
+          0,
+          0,
+          0,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          1,
+          0,
+          0,
+          0,
+          1,
+          0,
+          0,
+          1,
+          0,
+          1,
+          1,
+          1,
+          1,
+          0,
+          0,
+          1,
+          1,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          1,
+          0,
+          0,
+          0
          ]
         },
         {
@@ -2539,7 +2529,6 @@
          "name": "Linear Prediction",
          "type": "scatter",
          "x": [
-          199,
           200,
           201,
           202,
@@ -2588,59 +2577,60 @@
           245,
           246,
           247,
-          248
+          248,
+          249
          ],
          "y": [
-          176.6339105447736,
-          176.33255079539228,
-          173.70951348627142,
-          172.36737402792815,
-          172.98318206329066,
-          171.58968437787553,
-          166.14864487093175,
-          168.44234419850216,
-          170.43028565504235,
-          170.25741364305773,
-          172.6501630107704,
-          177.54021357472786,
-          175.75128962375848,
-          178.98189487768735,
-          181.5656307151475,
-          182.89071477475954,
-          182.9565648027236,
-          185.44618645650084,
-          184.638914063611,
-          187.39060450703846,
-          188.49802111938004,
-          189.47275085871212,
-          189.62652115605837,
-          191.4460969434494,
-          190.33352033514842,
-          191.53618684376104,
-          189.56624938470523,
-          189.7261482560688,
-          190.18849851004558,
-          189.4072684977466,
-          189.26941695159204,
-          190.83654439722477,
-          188.5011905420445,
-          193.04245153329103,
-          191.97823732024858,
-          194.55546308042807,
-          195.13594751739487,
-          192.4896340946915,
-          193.59738096737146,
-          196.70672437589198,
-          197.76249270522197,
-          198.1577654028476,
-          195.09729504436257,
-          196.6628632625957,
-          195.66619618242453,
-          193.63746239357516,
-          193.55774863142128,
-          192.99506183394243,
-          192.34905400475165,
-          193.795616744846
+          0.5476118799477752,
+          0.4662617097124613,
+          0.5370608089608514,
+          0.4830880313932542,
+          0.5274074027866439,
+          0.420369800886791,
+          0.5901638876285505,
+          0.5556640319221832,
+          0.5161335561761776,
+          0.5481542524813883,
+          0.5215945865768319,
+          0.49858903758781103,
+          0.5265961692847325,
+          0.5473589314516476,
+          0.4836758989771629,
+          0.48341320921744124,
+          0.527368126395246,
+          0.43614587545416583,
+          0.4348812776367036,
+          0.5031104604117544,
+          0.44879377944433996,
+          0.4210955345632986,
+          0.46854789096283034,
+          0.41557349069884675,
+          0.4651249890114588,
+          0.4293839390552945,
+          0.432728063727564,
+          0.4768432111106269,
+          0.43556862884427383,
+          0.43721541817993703,
+          0.4329775977467616,
+          0.3557836931983168,
+          0.4854568685204199,
+          0.3991500928759977,
+          0.4719759976306601,
+          0.4577260929135718,
+          0.3764939145228855,
+          0.43907670741382065,
+          0.4767714600018227,
+          0.3756886326386648,
+          0.5895097829839693,
+          0.37380747295327876,
+          0.4458500314652305,
+          0.3825360455357676,
+          0.38772534320466345,
+          0.3638910417064415,
+          0.4032820567142815,
+          0.41482224677427915,
+          0.40751953721256606,
+          0.4034681562756063
          ]
         },
         {
@@ -2648,7 +2638,6 @@
          "name": "Ridge Prediction",
          "type": "scatter",
          "x": [
-          199,
           200,
           201,
           202,
@@ -2697,59 +2686,60 @@
           245,
           246,
           247,
-          248
+          248,
+          249
          ],
          "y": [
-          176.58748081498592,
-          176.63472574408294,
-          174.12876746000765,
-          172.07236317940502,
-          172.7912111196621,
-          171.83591520806118,
-          167.6566417859892,
-          168.1616479465954,
-          170.0625934364428,
-          169.89610719863353,
-          172.32729934605686,
-          176.52665643693337,
-          174.86595456445266,
-          178.00913488768705,
-          180.9390882356086,
-          182.60513417071132,
-          183.0047405677708,
-          185.1506781568386,
-          184.8957889281263,
-          187.1225135773817,
-          188.46656916056537,
-          189.42636014451566,
-          189.5313356596977,
-          190.82348436312213,
-          190.54543293378345,
-          191.73384879807307,
-          190.0914395558187,
-          189.62450094798777,
-          190.18659522801357,
-          190.18765342925107,
-          189.324759428498,
-          190.43503113864585,
-          188.39738218835893,
-          192.14125564947213,
-          192.92829729264463,
-          194.27057247925177,
-          194.79003786401145,
-          192.0246812268837,
-          193.33279601489997,
-          196.19576310264694,
-          197.45094059621687,
-          198.40870050745272,
-          194.9483818100404,
-          196.39378039623506,
-          195.92767858654167,
-          194.60862747811194,
-          193.81811217913653,
-          192.93984921313287,
-          192.13672699108696,
-          193.69048641616885
+          0.5217764876070674,
+          0.5037998658456049,
+          0.5225272342262279,
+          0.5067577777249299,
+          0.5109153030474441,
+          0.44823135897478006,
+          0.5524216275773122,
+          0.5178765567897383,
+          0.5405979808236099,
+          0.5320894904613783,
+          0.4985394858803597,
+          0.4914894672034543,
+          0.5138086771304121,
+          0.5271011855342,
+          0.4829911638402005,
+          0.48330218692589666,
+          0.5083682558940414,
+          0.44478105858478933,
+          0.45635203944685887,
+          0.46437892603807845,
+          0.4348160545687696,
+          0.45608303113311227,
+          0.45104593251942743,
+          0.438705055886037,
+          0.44640208673910964,
+          0.4461637428373692,
+          0.436636053455844,
+          0.45727767004971787,
+          0.4340111205291467,
+          0.46494856294257253,
+          0.4528480364493074,
+          0.4064351456041798,
+          0.4609124106553983,
+          0.4084484162102918,
+          0.4530647913604092,
+          0.45391529347586695,
+          0.40712645046626833,
+          0.46504698425601804,
+          0.4548687079267455,
+          0.40421136802009056,
+          0.5899827717710738,
+          0.39302629735984207,
+          0.4402395999088461,
+          0.40898439744667475,
+          0.3963668344191765,
+          0.3967563882407348,
+          0.3965196825332765,
+          0.43483472713553345,
+          0.4137349839878227,
+          0.4135219252999456
          ]
         },
         {
@@ -2757,7 +2747,6 @@
          "name": "Lasso Prediction",
          "type": "scatter",
          "x": [
-          199,
           200,
           201,
           202,
@@ -2806,67 +2795,64 @@
           245,
           246,
           247,
-          248
+          248,
+          249
          ],
          "y": [
-          176.7528758335658,
-          176.6907971391611,
-          173.7971603791017,
-          172.18644905640733,
-          172.77010140136002,
-          171.9321089868818,
-          166.9259069809999,
-          168.57446879815797,
-          170.51178123686364,
-          169.83355954022198,
-          172.44857253549577,
-          177.17032132627781,
-          175.30341372188215,
-          178.41333803364523,
-          181.2166762326105,
-          182.77019203899582,
-          183.01216249233187,
-          185.32668810073594,
-          184.83933220226422,
-          187.1837782352289,
-          188.7842586019841,
-          189.58998548281022,
-          189.39498879251545,
-          191.1739777905062,
-          190.36007740797265,
-          191.76769585631715,
-          189.7939547923471,
-          189.69200484165026,
-          190.32982837943675,
-          189.86158120705542,
-          189.13772451765988,
-          190.44277833703703,
-          188.17407987195037,
-          192.480236672875,
-          192.53014840960606,
-          194.5293205495552,
-          194.91399911559785,
-          192.1236194818599,
-          193.1746575859452,
-          196.46545654602323,
-          197.35776040436534,
-          198.331333322299,
-          194.9744351173349,
-          196.5795562040295,
-          195.6462654016499,
-          194.15360038948282,
-          193.53258020000908,
-          193.12375088355338,
-          192.0951971760303,
-          193.74926637724445
+          0.5194570097441761,
+          0.5209592573437765,
+          0.5405832278244845,
+          0.5358174173458127,
+          0.5374613784076633,
+          0.5331258883870928,
+          0.5630627618945995,
+          0.5507142127042581,
+          0.5560826326086105,
+          0.5405484191858912,
+          0.5076703326671006,
+          0.511175892417884,
+          0.5106086193511118,
+          0.4981398987393281,
+          0.4877827800584131,
+          0.48468376074858094,
+          0.476095694680051,
+          0.47048729313106114,
+          0.4568012942434999,
+          0.45852211834156364,
+          0.4462149687321074,
+          0.44946647398665257,
+          0.44834605707429315,
+          0.44657180065281643,
+          0.44545023665796735,
+          0.4557818971296125,
+          0.45069576020029756,
+          0.4544609312674551,
+          0.4467983791676934,
+          0.4529047543293189,
+          0.44845636186727034,
+          0.44563225707274856,
+          0.4385839142514747,
+          0.42863981117376104,
+          0.43293999439475084,
+          0.42759311248305776,
+          0.42405695076897637,
+          0.4350358726480349,
+          0.41557244973643537,
+          0.39919991485111184,
+          0.40902420896631453,
+          0.41075734608753667,
+          0.422351216794463,
+          0.41298949440860944,
+          0.41652016726330154,
+          0.4241409284095874,
+          0.43251097944279465,
+          0.43549189420383416,
+          0.43105202382845137,
+          0.43043773423727005
          ]
         }
        ],
        "layout": {
-        "legend": {
-         "x": 0,
-         "y": 1
-        },
         "template": {
          "data": {
           "bar": [
@@ -3684,16 +3670,16 @@
          }
         },
         "title": {
-         "text": "Model Predictions vs Actual Close Price"
+         "text": "Model Prediction Probabilities vs Actual Movement"
         },
         "xaxis": {
          "title": {
-          "text": "Index / Time"
+          "text": "Index"
          }
         },
         "yaxis": {
          "title": {
-          "text": "Close Price (USD)"
+          "text": "Probability / Class"
          }
         }
        }
@@ -3704,41 +3690,32 @@
     }
    ],
    "source": [
-    "\n",
-    "# Predict with each model\n",
-    "preds_dict = {}\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train_scaled, y_train)\n",
-    "    preds = model.predict(X_test_scaled)\n",
-    "    preds_dict[name] = preds\n",
-    "\n",
-    "# Create Plotly figure\n",
     "fig = go.Figure()\n",
     "\n",
-    "# Plot actual close prices\n",
+    "# Plot actual binary labels\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=X_test.index,\n",
     "    y=y_test,\n",
-    "    mode='lines+markers',\n",
-    "    name='Actual Close',\n",
-    "    line=dict(color='black', width=2)\n",
+    "    mode='markers',\n",
+    "    name='Actual Movement (0=Down, 1=Up)',\n",
+    "    marker=dict(color='black', size=6)\n",
     "))\n",
     "\n",
-    "# Plot model predictions\n",
-    "for name, preds in preds_dict.items():\n",
+    "# Plot predicted probabilities\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train_scaled, y_train)\n",
+    "    probs = model.predict(X_test_scaled)  # this is still regression, not class probs\n",
     "    fig.add_trace(go.Scatter(\n",
     "        x=X_test.index,\n",
-    "        y=preds,\n",
+    "        y=probs,\n",
     "        mode='lines',\n",
     "        name=f'{name} Prediction'\n",
     "    ))\n",
     "\n",
-    "# Customize layout\n",
     "fig.update_layout(\n",
-    "    title='Model Predictions vs Actual Close Price',\n",
-    "    xaxis_title='Index / Time',\n",
-    "    yaxis_title='Close Price (USD)',\n",
-    "    legend=dict(x=0, y=1),\n",
+    "    title='Model Prediction Probabilities vs Actual Movement',\n",
+    "    xaxis_title='Index',\n",
+    "    yaxis_title='Probability / Class',\n",
     "    template='plotly_white'\n",
     ")\n",
     "\n",
