--- a/forecastingARIMA.ipynb
+++ b/forecastingARIMA.ipynb
@@ -5110,8 +5110,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "319476f1",
+   "metadata": {},
+   "source": [
+    "### ARIMA Model - Auto Regressive Integrated Moving Average\n",
+    "\n",
+    "The **ARIMA (AutoRegressive Integrated Moving Average)** model is a powerful time series forecasting method that combines autoregressive terms, differencing to remove trends, and moving averages of past errors. It is well-suited for modeling non-stationary data with underlying patterns but no clear seasonality.\n",
+    "\n",
+    "$$\n",
+    "\\Delta^d y_t = c + \\sum_{i=1}^{p} \\phi_i \\Delta^d y_{t-i} + \\sum_{j=1}^{q} \\theta_j \\epsilon_{t-j} + \\epsilon_t\n",
+    "$$\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\textbf{where:} \\\\\n",
+    "\\Delta^d y_t &= \\text{the } d\\text{-th order differenced series} \\\\\n",
+    "c &= \\text{constant term} \\\\\n",
+    "\\phi_i &= \\text{AR coefficient} \\\\\n",
+    "\\theta_j &= \\text{MA coefficient} \\\\\n",
+    "\\epsilon_t &= \\text{white noise error at time } t \\\\\n",
+    "p &= \\text{number of autoregressive lags} \\\\\n",
+    "d &= \\text{number of differences (to make the series stationary)} \\\\\n",
+    "q &= \\text{number of moving average lags}\n",
+    "\\end{aligned}\n",
+    "\n",
+    "The Auto-ARIMA function implementes the Box-Jenkins framework to iterate through finding the best ARIMA model to fit this data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "id": "77099083",
    "metadata": {},
    "outputs": [
@@ -5120,23 +5148,23 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=7727.556, Time=1.39 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=7727.556, Time=1.42 sec\n",
       " ARIMA(0,1,0)(0,0,0)[0] intercept   : AIC=7750.868, Time=0.03 sec\n",
-      " ARIMA(1,1,0)(0,0,0)[0] intercept   : AIC=7751.662, Time=0.08 sec\n",
-      " ARIMA(0,1,1)(0,0,0)[0] intercept   : AIC=7751.611, Time=0.14 sec\n",
+      " ARIMA(1,1,0)(0,0,0)[0] intercept   : AIC=7751.662, Time=0.10 sec\n",
+      " ARIMA(0,1,1)(0,0,0)[0] intercept   : AIC=7751.611, Time=0.13 sec\n",
       " ARIMA(0,1,0)(0,0,0)[0]             : AIC=7751.572, Time=0.03 sec\n",
-      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=7754.623, Time=0.39 sec\n",
-      " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=7754.618, Time=0.59 sec\n",
-      " ARIMA(3,1,2)(0,0,0)[0] intercept   : AIC=7752.238, Time=1.58 sec\n",
-      " ARIMA(2,1,3)(0,0,0)[0] intercept   : AIC=7752.657, Time=1.45 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=7752.727, Time=0.38 sec\n",
-      " ARIMA(1,1,3)(0,0,0)[0] intercept   : AIC=7750.029, Time=0.58 sec\n",
-      " ARIMA(3,1,1)(0,0,0)[0] intercept   : AIC=7756.538, Time=0.45 sec\n",
-      " ARIMA(3,1,3)(0,0,0)[0] intercept   : AIC=7755.742, Time=2.16 sec\n",
-      " ARIMA(2,1,2)(0,0,0)[0]             : AIC=7728.197, Time=0.87 sec\n",
+      " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=7754.623, Time=0.42 sec\n",
+      " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=7754.618, Time=0.61 sec\n",
+      " ARIMA(3,1,2)(0,0,0)[0] intercept   : AIC=7752.238, Time=1.60 sec\n",
+      " ARIMA(2,1,3)(0,0,0)[0] intercept   : AIC=7752.657, Time=1.46 sec\n",
+      " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=7752.727, Time=0.40 sec\n",
+      " ARIMA(1,1,3)(0,0,0)[0] intercept   : AIC=7750.029, Time=0.60 sec\n",
+      " ARIMA(3,1,1)(0,0,0)[0] intercept   : AIC=7756.538, Time=0.46 sec\n",
+      " ARIMA(3,1,3)(0,0,0)[0] intercept   : AIC=7755.742, Time=2.22 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[0]             : AIC=7728.197, Time=0.90 sec\n",
       "\n",
       "Best model:  ARIMA(2,1,2)(0,0,0)[0] intercept\n",
-      "Total fit time: 10.132 seconds\n"
+      "Total fit time: 10.394 seconds\n"
      ]
     }
    ],
@@ -5158,7 +5186,7 @@
     "    train_preds = ARIMA_model.predict_in_sample()\n",
     "    train_preds = train_preds[1:]  # Adjust for d=1 lag\n",
     "\n",
-    "    forecast_horizon = 10\n",
+    "    forecast_horizon = len(test_series)\n",
     "    test_preds = ARIMA_model.predict(n_periods=forecast_horizon)\n",
     "\n",
     "    model_aic = ARIMA_model.aic()\n",
@@ -5180,7 +5208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "id": "3e23caa1",
    "metadata": {},
    "outputs": [
@@ -12862,7 +12890,199 @@
           "2024-03-21T04:00:00",
           "2024-03-22T04:00:00",
           "2024-03-25T04:00:00",
-          "2024-03-26T04:00:00"
+          "2024-03-26T04:00:00",
+          "2024-03-27T04:00:00",
+          "2024-03-28T04:00:00",
+          "2024-04-01T04:00:00",
+          "2024-04-02T04:00:00",
+          "2024-04-03T04:00:00",
+          "2024-04-04T04:00:00",
+          "2024-04-05T04:00:00",
+          "2024-04-08T04:00:00",
+          "2024-04-09T04:00:00",
+          "2024-04-10T04:00:00",
+          "2024-04-11T04:00:00",
+          "2024-04-12T04:00:00",
+          "2024-04-15T04:00:00",
+          "2024-04-16T04:00:00",
+          "2024-04-17T04:00:00",
+          "2024-04-18T04:00:00",
+          "2024-04-19T04:00:00",
+          "2024-04-22T04:00:00",
+          "2024-04-23T04:00:00",
+          "2024-04-24T04:00:00",
+          "2024-04-25T04:00:00",
+          "2024-04-26T04:00:00",
+          "2024-04-29T04:00:00",
+          "2024-04-30T04:00:00",
+          "2024-05-01T04:00:00",
+          "2024-05-02T04:00:00",
+          "2024-05-03T04:00:00",
+          "2024-05-06T04:00:00",
+          "2024-05-07T04:00:00",
+          "2024-05-08T04:00:00",
+          "2024-05-09T04:00:00",
+          "2024-05-10T04:00:00",
+          "2024-05-13T04:00:00",
+          "2024-05-14T04:00:00",
+          "2024-05-15T04:00:00",
+          "2024-05-16T04:00:00",
+          "2024-05-17T04:00:00",
+          "2024-05-20T04:00:00",
+          "2024-05-21T04:00:00",
+          "2024-05-22T04:00:00",
+          "2024-05-23T04:00:00",
+          "2024-05-24T04:00:00",
+          "2024-05-28T04:00:00",
+          "2024-05-29T04:00:00",
+          "2024-05-30T04:00:00",
+          "2024-05-31T04:00:00",
+          "2024-06-03T04:00:00",
+          "2024-06-04T04:00:00",
+          "2024-06-05T04:00:00",
+          "2024-06-06T04:00:00",
+          "2024-06-07T04:00:00",
+          "2024-06-10T04:00:00",
+          "2024-06-11T04:00:00",
+          "2024-06-12T04:00:00",
+          "2024-06-13T04:00:00",
+          "2024-06-14T04:00:00",
+          "2024-06-17T04:00:00",
+          "2024-06-18T04:00:00",
+          "2024-06-20T04:00:00",
+          "2024-06-21T04:00:00",
+          "2024-06-24T04:00:00",
+          "2024-06-25T04:00:00",
+          "2024-06-26T04:00:00",
+          "2024-06-27T04:00:00",
+          "2024-06-28T04:00:00",
+          "2024-07-01T04:00:00",
+          "2024-07-02T04:00:00",
+          "2024-07-03T04:00:00",
+          "2024-07-05T04:00:00",
+          "2024-07-08T04:00:00",
+          "2024-07-09T04:00:00",
+          "2024-07-10T04:00:00",
+          "2024-07-11T04:00:00",
+          "2024-07-12T04:00:00",
+          "2024-07-15T04:00:00",
+          "2024-07-16T04:00:00",
+          "2024-07-17T04:00:00",
+          "2024-07-18T04:00:00",
+          "2024-07-19T04:00:00",
+          "2024-07-22T04:00:00",
+          "2024-07-23T04:00:00",
+          "2024-07-24T04:00:00",
+          "2024-07-25T04:00:00",
+          "2024-07-26T04:00:00",
+          "2024-07-29T04:00:00",
+          "2024-07-30T04:00:00",
+          "2024-07-31T04:00:00",
+          "2024-08-01T04:00:00",
+          "2024-08-02T04:00:00",
+          "2024-08-05T04:00:00",
+          "2024-08-06T04:00:00",
+          "2024-08-07T04:00:00",
+          "2024-08-08T04:00:00",
+          "2024-08-09T04:00:00",
+          "2024-08-12T04:00:00",
+          "2024-08-13T04:00:00",
+          "2024-08-14T04:00:00",
+          "2024-08-15T04:00:00",
+          "2024-08-16T04:00:00",
+          "2024-08-19T04:00:00",
+          "2024-08-20T04:00:00",
+          "2024-08-21T04:00:00",
+          "2024-08-22T04:00:00",
+          "2024-08-23T04:00:00",
+          "2024-08-26T04:00:00",
+          "2024-08-27T04:00:00",
+          "2024-08-28T04:00:00",
+          "2024-08-29T04:00:00",
+          "2024-08-30T04:00:00",
+          "2024-09-03T04:00:00",
+          "2024-09-04T04:00:00",
+          "2024-09-05T04:00:00",
+          "2024-09-06T04:00:00",
+          "2024-09-09T04:00:00",
+          "2024-09-10T04:00:00",
+          "2024-09-11T04:00:00",
+          "2024-09-12T04:00:00",
+          "2024-09-13T04:00:00",
+          "2024-09-16T04:00:00",
+          "2024-09-17T04:00:00",
+          "2024-09-18T04:00:00",
+          "2024-09-19T04:00:00",
+          "2024-09-20T04:00:00",
+          "2024-09-23T04:00:00",
+          "2024-09-24T04:00:00",
+          "2024-09-25T04:00:00",
+          "2024-09-26T04:00:00",
+          "2024-09-27T04:00:00",
+          "2024-09-30T04:00:00",
+          "2024-10-01T04:00:00",
+          "2024-10-02T04:00:00",
+          "2024-10-03T04:00:00",
+          "2024-10-04T04:00:00",
+          "2024-10-07T04:00:00",
+          "2024-10-08T04:00:00",
+          "2024-10-09T04:00:00",
+          "2024-10-10T04:00:00",
+          "2024-10-11T04:00:00",
+          "2024-10-14T04:00:00",
+          "2024-10-15T04:00:00",
+          "2024-10-16T04:00:00",
+          "2024-10-17T04:00:00",
+          "2024-10-18T04:00:00",
+          "2024-10-21T04:00:00",
+          "2024-10-22T04:00:00",
+          "2024-10-23T04:00:00",
+          "2024-10-24T04:00:00",
+          "2024-10-25T04:00:00",
+          "2024-10-28T04:00:00",
+          "2024-10-29T04:00:00",
+          "2024-10-30T04:00:00",
+          "2024-10-31T04:00:00",
+          "2024-11-01T04:00:00",
+          "2024-11-04T05:00:00",
+          "2024-11-05T05:00:00",
+          "2024-11-06T05:00:00",
+          "2024-11-07T05:00:00",
+          "2024-11-08T05:00:00",
+          "2024-11-11T05:00:00",
+          "2024-11-12T05:00:00",
+          "2024-11-13T05:00:00",
+          "2024-11-14T05:00:00",
+          "2024-11-15T05:00:00",
+          "2024-11-18T05:00:00",
+          "2024-11-19T05:00:00",
+          "2024-11-20T05:00:00",
+          "2024-11-21T05:00:00",
+          "2024-11-22T05:00:00",
+          "2024-11-25T05:00:00",
+          "2024-11-26T05:00:00",
+          "2024-11-27T05:00:00",
+          "2024-11-29T05:00:00",
+          "2024-12-02T05:00:00",
+          "2024-12-03T05:00:00",
+          "2024-12-04T05:00:00",
+          "2024-12-05T05:00:00",
+          "2024-12-06T05:00:00",
+          "2024-12-09T05:00:00",
+          "2024-12-10T05:00:00",
+          "2024-12-11T05:00:00",
+          "2024-12-12T05:00:00",
+          "2024-12-13T05:00:00",
+          "2024-12-16T05:00:00",
+          "2024-12-17T05:00:00",
+          "2024-12-18T05:00:00",
+          "2024-12-19T05:00:00",
+          "2024-12-20T05:00:00",
+          "2024-12-23T05:00:00",
+          "2024-12-24T05:00:00",
+          "2024-12-26T05:00:00",
+          "2024-12-27T05:00:00",
+          "2024-12-30T05:00:00"
          ],
          "y": [
           173.40557260306684,
@@ -12874,7 +13094,199 @@
           173.7857933934162,
           173.89492311469354,
           173.90373749581636,
-          174.06486090564317
+          174.06486090564317,
+          174.04087811610216,
+          174.21234393606923,
+          174.2010285568138,
+          174.3389519086492,
+          174.37755501408353,
+          174.45545627879048,
+          174.55691924585534,
+          174.57650918379642,
+          174.7250899414867,
+          174.71390849397721,
+          174.8738093012667,
+          174.87151431402677,
+          175.00393680746555,
+          175.04398338954897,
+          175.1245494314016,
+          175.21966735660033,
+          175.24843927776928,
+          175.38614980791883,
+          175.38621504056246,
+          175.53581046823695,
+          175.5417091454714,
+          175.66894100251287,
+          175.7106585168052,
+          175.79316612081493,
+          175.88305965854641,
+          175.91963714129517,
+          176.04794232006313,
+          176.05787367455014,
+          176.19830196519467,
+          176.2116236689893,
+          176.33398895982248,
+          176.3775246995305,
+          176.46138590196875,
+          176.54700266995303,
+          176.59019891882045,
+          176.7103799198389,
+          176.7289534403648,
+          176.86124075136155,
+          176.8812706691884,
+          176.99909876510384,
+          177.0445359724968,
+          177.1292764752416,
+          177.21141544839406,
+          177.26020900756427,
+          177.3733846620438,
+          177.3995169594805,
+          177.52458636448887,
+          177.55066438547178,
+          177.66428330117296,
+          177.71165460891322,
+          177.79689531180483,
+          177.87622802540477,
+          177.9297413827014,
+          178.0368872764166,
+          178.0696208832753,
+          178.1883009917381,
+          178.21981994074383,
+          178.32955123885853,
+          178.37884983714073,
+          178.4642910717426,
+          178.54138002220162,
+          178.59886078791706,
+          178.7008263035738,
+          178.73931633959842,
+          178.85234948047676,
+          178.8887528876794,
+          178.99490786818498,
+          179.0460967395158,
+          179.13150483948348,
+          179.20681942742473,
+          179.26762380283924,
+          179.36514730198394,
+          179.40864936714124,
+          179.51669930270825,
+          179.55747885284669,
+          179.6603557930672,
+          179.7133753093233,
+          179.79857119842353,
+          179.87250151958463,
+          179.93607979822121,
+          180.0298021226266,
+          180.0776613332685,
+          180.18132048444582,
+          180.22601326192114,
+          180.32589550962848,
+          180.38066964489244,
+          180.46551916421205,
+          180.53838791851553,
+          180.60427178908483,
+          180.6947482476438,
+          180.746389332246,
+          180.8461855093039,
+          180.89437113176623,
+          180.99152588552118,
+          181.04796726239078,
+          181.13237299399876,
+          181.20444575163998,
+          181.2722371953553,
+          181.35994818908878,
+          181.41486656183037,
+          181.51126920385903,
+          181.56256691734478,
+          181.65724455524227,
+          181.71525851119657,
+          181.7991528869853,
+          181.87064692223973,
+          181.94000851884016,
+          182.02536894378832,
+          182.08312267701638,
+          182.1765486108878,
+          182.23061440330352,
+          182.3230482443537,
+          182.38253607776434,
+          182.4658755898683,
+          182.5369674682069,
+          182.6076139447366,
+          182.6909815003296,
+          182.75118412039046,
+          182.8420028553761,
+          182.89852663168688,
+          182.98893303370454,
+          183.0497945656995,
+          183.13255491918693,
+          183.20338700092358,
+          183.27507787520338,
+          183.35676039424624,
+          183.41907442905358,
+          183.50761300718077,
+          183.56631585861555,
+          183.65489457317383,
+          183.71703014133962,
+          183.79920221117976,
+          183.86988821499062,
+          183.94242140191085,
+          184.02268330759173,
+          184.0868145184715,
+          184.17336194338344,
+          184.2339935339455,
+          184.32092825308544,
+          184.38424023553753,
+          184.46582670849853,
+          184.53645646050435,
+          184.6096627238897,
+          184.68873070923635,
+          184.75442294390706,
+          184.8392342126769,
+          184.90157029892725,
+          184.9870293402568,
+          185.05142329356434,
+          185.13243589200545,
+          185.20307937046786,
+          185.27681751643937,
+          185.3548855324017,
+          185.42191614030935,
+          185.5052159035509,
+          185.5690559977414,
+          185.65319308461858,
+          185.71857856612766,
+          185.79903576488417,
+          185.8697465367299,
+          185.9438992563318,
+          186.0211328861374,
+          186.08930864168514,
+          186.17129451757188,
+          186.23645969951036,
+          186.3194148014531,
+          186.38570593544233,
+          186.4656310954079,
+          186.5364492285712,
+          186.61091950805573,
+          186.68745979764776,
+          186.75661328108154,
+          186.83745884866877,
+          186.90378972800067,
+          186.98568993353456,
+          187.05280577111407,
+          187.13222562392372,
+          187.20318014871563,
+          187.277888175392,
+          187.35385498258273,
+          187.42384137236527,
+          187.50369886902544,
+          187.57105369674667,
+          187.65201409679443,
+          187.71987881131767,
+          187.7988222389155,
+          187.86993322213354,
+          187.9448137221897,
+          188.02030864061322,
+          188.09100287501224,
+          188.17000562193496,
+          188.23825854776373
          ]
         }
        ],
@@ -13750,7 +14162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "id": "57858c53",
    "metadata": {},
    "outputs": [
@@ -13789,20 +14201,20 @@
        "      <td>7727.555984</td>\n",
        "      <td>0.998603</td>\n",
        "      <td>4.176211</td>\n",
-       "      <td>-0.138895</td>\n",
-       "      <td>7.332711</td>\n",
-       "      <td>10.144675</td>\n",
+       "      <td>-1.322272</td>\n",
+       "      <td>1461.515453</td>\n",
+       "      <td>10.410632</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               AIC  Train R2  Train MSE   Test R2  Test MSE   Time (s)\n",
-       "ARIMA  7727.555984  0.998603   4.176211 -0.138895  7.332711  10.144675"
+       "               AIC  Train R2  Train MSE   Test R2     Test MSE   Time (s)\n",
+       "ARIMA  7727.555984  0.998603   4.176211 -1.322272  1461.515453  10.410632"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
